RESOLVED FIXED159243
We should not crash if there is a finally inside a for-in loop
https://bugs.webkit.org/show_bug.cgi?id=159243
Summary We should not crash if there is a finally inside a for-in loop
Keith Miller
Reported 2016-06-28 18:24:47 PDT
We should not crash there is a finally inside a for-in loop
Attachments
Patch (6.74 KB, patch)
2016-06-28 18:46 PDT, Keith Miller
no flags
Patch for landing (6.78 KB, patch)
2016-06-28 18:52 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2016-06-28 18:46:38 PDT
Keith Miller
Comment 2 2016-06-28 18:52:09 PDT
Created attachment 282311 [details] Patch for landing
Keith Miller
Comment 3 2016-06-28 18:54:09 PDT
WebKit Commit Bot
Comment 4 2016-06-28 21:06:52 PDT
Comment on attachment 282311 [details] Patch for landing Clearing flags on attachment: 282311 Committed r202608: <http://trac.webkit.org/changeset/202608>
WebKit Commit Bot
Comment 5 2016-06-28 21:06:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.